--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>tic-tac-toe game</title>
-    <link rel="stylesheet" href="tic tac toe.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="msg-container hide">
@@ -26,6 +26,6 @@
       </div>
     </div>
     <button class="reset-btn">Reset Game</button>
-    <script src="tic tac toe.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
